# pacman-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DR51/ros_pkgs/controllers/controllers/: CMakeLists.txt  package.xml
DR52/: CMakeLists.txt  xmlcal-DEMO.7z
DR52/resources/Bham/: GraspCameraOpenNIDemo.cal  GraspCameraOpenNIDemo.xml  GraspDataImageDemo.xml  GraspDataImageDemoModel.xml  GraspDataImageDemoObject.xml  GraspDataPointsCurvDemo.xml  GraspDataPredictorModelDemo.xml  GraspDataPredictorQueryDemo.xml  GraspDataTrajectoryActiveSense.xml  GraspDataTrajectoryDemo.xml  PaCManBhamActiveSensDemo.xml  PaCManBhamDemo.xml
DR55/: CMakeLists.txt
DR55/cmake_modules/: ActiveSenseGraspCore.cmake  BaseDemo.cmake  CommonBhamDependencies.cmake  CommonBhamSetup.cmake  FindActiveSense.cmake
DR55/resources/: GolemCtrlRobotBorisDemoDR55.xml  GolemCtrlRobotBorisDemoDR55Sim.xml  GolemCtrlRobotBorisSchunkDemoDR55.xml  GolemCtrlRobotBorisSchunkDemoDR55Sim.xml  GolemCtrlRobotDemoDR55Boris.xml  GolemCtrlSchunkParallelGripper.xml  GolemPlannerRobotBorisSPGL.xml  GolemPlannerRobotBorisSPGR.xml  GraspArmHandForceDR55.xml  GraspCameraDepthSimDemoDR55Chest.xml  GraspCameraDepthSimDemoDR55LeftArm.xml  GraspCameraDepthSimDemoDR55RightArm.xml  GraspCameraOpenNIDemoActiveSenseDR55RightArm.xml  GraspCameraOpenNIDemoDR55Chest.xml  GraspCameraOpenNIDemoDR55ChestScan.xml  GraspCameraOpenNIDemoDR55LeftArm.xml  GraspCameraOpenNIDemoDR55LeftArmScanPassing.xml  GraspCameraOpenNIDemoDR55RightArm.xml  GraspDataContactModelDemoDR55.xml  GraspDataContactModelDemoDR55LeftArm.xml  GraspDataContactQueryDemoDR55.xml  GraspDataContactQueryDemoDR55LeftArm.xml  GraspDataImageDemoDR55.xml  GraspDataImageDemoDR55LeftArm.xml  GraspDataImageDemoDR55LeftArmScan.xml  GraspDataImageDemoDR55LeftArmScanPassing.xml  GraspDataImageDemoDR55RightArm.xml  GraspDataPointsCurvDemoDR55.xml  GraspDataPointsCurvDemoDR55LeftArm.xml  GraspDataPointsCurvDemoDR55LeftArmScan.xml  GraspDataTrajectoryDemoDR55.xml  GraspDataTrajectoryDemoDR55LeftArm.xml  GraspDemoDR55Data.xml  GraspDemoDR55_RobotBoris.xml  GraspDemoDR55_RobotBorisDepthSim.xml  GraspDemoDR55_RobotBorisSchunk.xml  GraspDemoDR55_RobotBorisSchunkDepthSim.xml  GraspDemoDR55_RobotBorisSim.xml  GraspFTClientDemoDR55.xml  GraspWorkspaceCtrlDR55.xml  (+1 more)
DR55/resources/Bham/: GraspCameraOpenNIChestDemoDR55.cal  GraspCameraOpenNIChestDemoDR55.xml  GraspCameraOpenNIDemoDR55.xml  GraspCameraOpenNIDemoDR55_left.xml  GraspCameraOpenNIDemoDR55_right.xml  GraspDataContactModelDemoDR55.xml  GraspDataContactQueryDemoDR55.xml  GraspDataImageDemoDR55.xml  GraspDataImageDemoDR55Object.xml  GraspDataImageObjectDemoDR55.xml  GraspDataPointsCurvDemoDR55.xml  GraspDataTrajectoryDemoDR55.xml  GraspDemoDR55Data-item-model-1.model  GraspDemoDR55_RobotBoris.xml  GraspDemoDR55_RobotBorisSim.xml
DR55/resources/cal/: GraspCameraDepthSimDemoDR55Chest.cal  GraspCameraDepthSimDemoDR55RightArm.cal  GraspCameraOpenGL.cal  GraspCameraOpenNIDemoDR55LeftArm.cal  GraspCameraOpenNIDemoDR55RightArm.cal  GraspCameraPointGrey.cal  GraspDataPointsCurvDemoDR55.xml  GraspFTClientDemoDR55.cal
DR55/resources/data/: DemoDR55Data-data.pacmandemo  DemoDR55Data-item-Query-1.pcd  DemoDR55Data-item-TrajectoryManip-1.wp  DemoDR55Data-item-TrajectoryManip-2.wp  DemoDR55Data-item-TrajectoryModel-plate-1.wp  DemoDR55Data-item-TrajectoryModel-plate-up-1.wp  DemoDR55Data-item-TrajectoryQuery-1.wp  DemoDR55Data-item-grasp-gripper-traj-1.wp  DemoDR55Data-item-grasp-light-plate-left-traj-1.wp  DemoDR55Data-item-grasp-light-plate-left-traj2-1.wp  DemoDR55Data-item-large_rack-1.pcd  DemoDR55Data-item-light-plate-left-curv-1.pcd  DemoDR55Data-item-light-plate-left-scan-1.pcd  DemoDR55Data-item-object_left-1.pcd  DemoDR55Data-item-pinch-light-plate-gripper-cm-1.model  DemoDR55Data-item-query_from_chest_rack2-1.pcd  DemoDR55Data-item-query_from_right_rack2-1.pcd  DemoDR55Data-item-right_workspace-5.pcd  DemoDR55Data-item-right_workspace-6.pcd  DemoDR55Data-item-small_rack-2.pcd  DemoDR55Data-item-small_rack-4.pcd  DemoDR55Data-item-small_rack-5.pcd  DemoDR55Data-item-small_rack-6.pcd  DemoDR55Data-item-small_rack-7.pcd  DemoDR55Data-item-small_rack_query-1.pcd  DemoDR55Data-item-small_rack_query-2.pcd  DemoDR55Data-item-small_rack_query-3.pcd  DemoDR55Data-item-small_rack_query-6.pcd  DemoDR55Data.xml
DR55/resources/data.bkp/: DemoDR55Data - Copy.xml  DemoDR55Data-data.pacmandemo  DemoDR55Data-item-Model-1.pcd  DemoDR55Data-item-ModelObj-1.pcd  DemoDR55Data-item-Object-1.pcd  DemoDR55Data-item-ObjectScan-1.pcd  DemoDR55Data-item-Query-1.pcd  DemoDR55Data-item-TrajectoryManip-3.wp  DemoDR55Data-item-TrajectoryManip-4.wp  DemoDR55Data-item-bowllarge-curv-all_views-1.pcd  DemoDR55Data-item-bowllarge-pinchsupp-1.wp  DemoDR55Data-item-bowllarge-rim-1.wp  DemoDR55Data-item-right_workspace-1.pcd  DemoDR55Data-item-right_workspace-2.pcd  DemoDR55Data-item-right_workspace-3.pcd  DemoDR55Data-item-right_workspace-4.pcd  DemoDR55Data-item-right_workspace-7.pcd  DemoDR55Data-item-small_rack-1.pcd  DemoDR55Data-item-small_rack-3.pcd  DemoDR55Data-item-small_rack_query-4.pcd  DemoDR55Data-item-small_rack_query-5.pcd  DemoDR55Data-item-small_rack_query-7.pcd  DemoDR55Data.xml
DR55/resources/data/demo1/: data-data.demo  data-item-Model-1.pcd  data-item-ModelObj-1.pcd  data-item-Object-1.pcd  data-item-ObjectScan-1.pcd  data-item-Query-1.pcd  data-item-TrajectoryModel-plate-1.wp  data.xml
DR55/resources/data/demo3/: data-item-Model-1.pcd  data-item-Object-1.pcd  data-item-ObjectScan-1.pcd  data-item-Query-1.pcd  data.xml  (+3 more)
doc/ExampleInterface/: CMakeLists.txt
ros_pkgs/hardware/hardware/: package.xml
ros_pkgs/perception/perception/: package.xml
ros_pkgs/perception/pose_estimation_uibk/: CMakeLists.txt  CMakeLists_rosmake.txt  feedback_mirela_p_wiki.txt  package.xml
ros_pkgs/planners/planners/: CMakeLists.txt  package.xml
ros_pkgs/planners/trajectory_planner_moveit/: CMakeLists.txt  package.xml
ros_pkgs/planners/uibk_robot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
ros_pkgs/ros_pkgs/: CMakeLists.txt  package.xml
(+537 files in other folders)
